updates till random function
